@@ -4373,7 +4373,7 @@ Class restartAction()
 	
 	director_.wantsFullScreenLayout = YES;
 	// Display Milliseconds Per Frame
-	[director_ setDisplayStats:kCCDirectorStatsMPF];
+	[director_ setDisplayStats:YES];
 	
 	// set FPS at 60
 	[director_ setAnimationInterval:1.0/60];
