@@ -5,6 +5,7 @@ version 2.0-beta2 XX-Dec-2011
 . [NEW] Director: it is a subclass of UIViewController (iOS only)
 . [NEW] Director: pushScene is the new recommended way to start the scene. Director will start the animation
 		automatically once the view is displayed (iOS only)
+. [NEW] Director: FPS & MPF are displayed at the same time
 . [NEW] EventDispatcher / TouchDispatcher: They are no longer singletons. They are an ivar of director.
 . [NEW] Scheduler: It is no longer a singleton. It is an ivar of director
 . [NEW] Template: RootViewController viewDidAppear / viewDidDissapear will run/pause the director
